fixing the spacing - qhwt-607

--- a/src/components/mega_main_navigation/css/component.scss
+++ b/src/components/mega_main_navigation/css/component.scss
@@ -107,7 +107,7 @@
         &-link{
             @include QLD-media(lg) {
                 display: block;
-                @include QLD-space(padding, .625unit .75unit .625unit .75unit);
+                @include QLD-space(padding, .625unit .5unit .625unit .5unit);
             }
             &--open{
                 background-color: var(--QLD-color-light-background);
